--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -12,19 +12,23 @@ jobs:
       steps:
         - name: Check out the repo
           uses: actions/checkout@v3
+
         - name: Set up Docker Buildx
           uses: docker/setup-buildx-action@v2
+
         - name: Login to Docker 
           uses: docker/login-action@v2
           with:
             username: ${{ secrets.DOCKER_USER }}
             password: ${{ secrets.DOCKER_PASSWORD }}
+
         - name: Push Backend to DockerHub
           uses: docker/build-push-action@v4
           with:
             context: ./backend/
             push: true
             tags: ${{ secrets.DOCKER_USER }}/docker-project-backend:latest
+
         - name: Push Frontend to DockerHub
           uses: docker/build-push-action@v4
           with:
@@ -32,13 +36,48 @@ jobs:
             push: true
             tags: ${{ secrets.DOCKER_USER }}/docker-project-frontend:latest
 
+        - name: Scan Backend Image with Trivy
+          uses: aquasecurity/trivy-action@0.28.0
+          with:
+            image-ref: ${{ secrets.DOCKER_USER }}/docker-project-backend:latest
+            format: table
+            exit-code: 0
+            ignore-unfixed: true
+            vuln-type: os,library
+            severity: 'CRITICAL,HIGH'
+
+        - name: Scan Frontend Image with Trivy
+          uses: aquasecurity/trivy-action@0.28.0
+          with:
+            image-ref: ${{ secrets.DOCKER_USER }}/docker-project-frontend:latest
+            format: table
+            exit-code: 0
+            ignore-unfixed: true
+            vuln-type: os,library
+            severity: 'CRITICAL,HIGH'
+
   run-with-docker-compose:
     name: Push Docker image to DockerHub
     runs-on: ubuntu-latest
+    env:
+      DOCKER_USER: ${{ secrets.DOCKER_USER }}
+      VERSION: ${{ secrets.VERSION }}
+      NGINX_PORT: ${{ secrets.NGINX_PORT }}
     steps:
       - name: Check out the repo
         uses: actions/checkout@v3
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
+
+      - name: Login to Docker
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USER }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
       - name: Build via Docker Compose
         uses: hoverkraft-tech/compose-action@v2.2.0
+        with:
+          compose-file: ./docker-compose.yml
+          compose-flags: --profile production
+          up-flags: --pull always -d
