--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -5,6 +5,11 @@ on:
     branches:
       - main
 
+env:
+  DOCKER_USER: ${{ secrets.DOCKER_USER }}
+  VERSION: v1.0.0
+  NGINX_PORT: 80
+
 jobs:
   build_and_push_to_docker_hub:
       name: Push Docker image to DockerHub
@@ -58,11 +63,8 @@ jobs:
 
   run-with-docker-compose:
     name: Push Docker image to DockerHub
+    needs: build_and_push_to_docker_hub
     runs-on: ubuntu-latest
-    env:
-      DOCKER_USER: ${{ secrets.DOCKER_USER }}
-      VERSION: ${{ secrets.VERSION }}
-      NGINX_PORT: ${{ secrets.NGINX_PORT }}
     steps:
       - name: Check out the repo
         uses: actions/checkout@v3
