--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -32,19 +32,19 @@ jobs:
           with:
             context: ./backend/
             push: true
-            tags: ${{ secrets.DOCKER_USER }}/docker-project-backend:${VERSION}
+            tags: ${{ secrets.DOCKER_USER }}/docker-project-backend:${{ secrets.VERSION }}
 
         - name: Push Frontend to DockerHub
           uses: docker/build-push-action@v4
           with:
             context: ./frontend/
             push: true
-            tags: ${{ secrets.DOCKER_USER }}/docker-project-frontend:${VERSION}
+            tags: ${{ secrets.DOCKER_USER }}/docker-project-frontend:${{ secrets.VERSION }}
 
         - name: Scan Backend Image with Trivy
           uses: aquasecurity/trivy-action@0.28.0
           with:
-            image-ref: ${{ secrets.DOCKER_USER }}/docker-project-backend:${VERSION}
+            image-ref: ${{ secrets.DOCKER_USER }}/docker-project-backend:${{ secrets.VERSION }}
             format: table
             exit-code: 0
             ignore-unfixed: true
@@ -54,7 +54,7 @@ jobs:
         - name: Scan Frontend Image with Trivy
           uses: aquasecurity/trivy-action@0.28.0
           with:
-            image-ref: ${{ secrets.DOCKER_USER }}/docker-project-frontend:${VERSION}
+            image-ref: ${{ secrets.DOCKER_USER }}/docker-project-frontend:${{ secrets.VERSION }}
             format: table
             exit-code: 0
             ignore-unfixed: true
